# oss4sg-community-analysis

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: run_analysis.py  run_extraction.py  run_identity_merging.py  run_statistical_tests.py
src/analysis/: aggregate_commit_metrics.py  build_corr.py  build_corr_rq1_rq2.py  build_project_list.py  check_vif.py  compare_original_vs_msn.py  compare_project_clusters.py  coverage_report.py  generate_commit_metrics_dendrogram.py  generate_understand_qodana_dendrogram.py  join_leave_rates.py  merge_commit_message_length.py  merge_commits_with_msn.py  merge_metrics.py  merge_pr_times.py  merge_project_info.py  normalize_table1.py  plot_cluster.py  plot_dendrogram_tree.py  plot_dendrogram_tree_rq1_rq2.py  plot_heatmaps.py  plot_heatmaps_rq1_rq2.py  plot_simple_dendrogram.py  recreate_experiment.py  report_clusters.py  validate_dataset.py
src/extraction/: batch_extract_all.py  build_master_commits_fullfat.py  build_master_dataset.py  build_one_sample.py  convert_git_to_commits.py  experiment2.py  extract_commits_full_fat.py  full_clone_all.py  trying_the_bare_thing.py
src/identity/: build_email_baseline.py  combine_global.py  merge_identities.py  run_all_projects.py  run_exp6.py  run_experiment6.py  utils_union_find.py
src/preprocessing/: analyze_by_email.py  analyze_by_email_lower.py  analyze_by_username.py  analyze_multi_project_contributors.py  build_all_ml_multi_email.py  build_ml_multi_email_direct.py  build_ml_multi_email_quick.py  build_ml_multi_email_subset.py  build_name_email_dataset.py  (+10 more)
(+46 files in other folders)
