[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "oss4sg-community-analysis"
version = "1.0.0"
description = "Community analysis codebase for OSS4SG ICSE 2026"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jellyfish>=1.0",
    "gitpython>=3.1",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
